--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="Estilo/estilo.css">
 </head>
 <body>
     <header>
         <a href="#"><img id="icono" src="img/restaurante Pinta.png" alt="error"></a>
         <nav>
             <ul class="menu">
-                <li><a class="enlaces" href="#">Carta</a></li>
+                <li><a class="enlaces" id="carta" href="#">Carta</a>
+                    <ul class="desplegable">
+                        <li><a class="subenlaces" href="#">Carta</a></li>
+                        <li><a class="subenlaces" href="#">Carta</a></li>
+                        <li><a class="subenlaces" href="#">Carta</a></li>
+                        <li><a class="subenlaces" href="#">Carta</a></li>
+                    </ul>
+                </li>
                 <li><a class="enlaces" href="#">Eventos</a></li>
                 <li><a class="enlaces" href="#">Pedidos</a></li>
                 <li><a class="enlaces" href="#">Reservas</a></li>
@@ -38,7 +45,7 @@
 
     </main>
     <footer>
-        <p><a class="contacto" href="contacto.html">Contacto</a>
+        <p><a class="contacto" href="Paginas_Secundarias/contacto.html">Contacto</a>
             <ul class="redes">
             <li><a href="https://www.facebook.com"><img src="img/Facebook.png" alt="Facebook" width="35" height="35"></a></li>
             <li><a href="https://www.instagram.com"><img src="img/Instagram.png" alt="Instagram" width="35" height="35"></a></li>
