--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <a href="#"><img id="icono" src="img/restaurante Pinta.png" alt="error"></a>
-        <nav>
-            <ul class="menu">
+        <nav  class="menu">
+            <ul>
                 <li><a class="enlaces" id="carta" href="#">Carta</a>
                     <ul class="desplegable">
-                        <li><a class="subenlaces" href="#">Carta</a></li>
-                        <li><a class="subenlaces" href="#">Carta</a></li>
-                        <li><a class="subenlaces" href="#">Carta</a></li>
-                        <li><a class="subenlaces" href="#">Carta</a></li>
+                        <li><a class="subenlaces" href="#">Menú del día</a></li>
+                        <li><a class="subenlaces" href="#">Platos</a></li>
+                        <li><a class="subenlaces" href="#">Postres</a></li>
+                        <li><a class="subenlaces" href="#">Vinos</a></li>
                     </ul>
                 </li>
                 <li><a class="enlaces" href="#">Eventos</a></li>
