--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
             <ul>
                 <li><a class="enlaces" id="carta" href="#">Carta</a>
                     <ul class="desplegable">
-                        <li><a class="subenlaces" href="#">Menú del día</a></li>
-                        <li><a class="subenlaces" href="#">Platos</a></li>
-                        <li><a class="subenlaces" href="#">Postres</a></li>
-                        <li><a class="subenlaces" href="#">Vinos</a></li>
+                        <li><a class="subenlaces" href="#">- Menú del día</a></li>
+                        <li><a class="subenlaces" href="#">- Platos</a></li>
+                        <li><a class="subenlaces" href="#">- Postres</a></li>
+                        <li><a class="subenlaces" href="#">- Vinos</a></li>
                     </ul>
                 </li>
                 <li><a class="enlaces" href="#">Eventos</a></li>
                 <li><a class="enlaces" href="#">Pedidos</a></li>
                 <li><a class="enlaces" href="#">Reservas</a></li>
                 <li><a class="enlaces" href="#">Quienes somos</a></li>
-                <li><a class="banderas" href="#"><img id="bandera1" src="img/españita.png" alt="error"></a></li>
-                <li><a class="banderas" href="#"><img id="bandera2" src="img/inglaterra.png" alt="error"></a></li>
+                <li><a href="#"><img class="banderas" src="img/españita.png" width="20px" height="20px" alt="error"></a></li>
+                <li><a href="#"><img class="banderas" src="img/inglaterra.png" width="20px" height="20px" alt="error"></a></li>
             </ul>
         </nav>
     </header><br>
