--- a/index.html
+++ b/index.html
@@ -3,54 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurante Pinta</title>
     <link rel="stylesheet" href="Estilo/estilo.css">
+    <link rel="shortcut icon" href="img/favicon.ico" mce_href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <header>
         <a href="#"><img id="icono" src="img/restaurante Pinta.png" alt="error"></a>
         <nav  class="menu">
             <ul>
+                <li><a href="#"><img id="icono2" src="img/restaurante Pinta - copia.png" alt="error"></a></li>
                 <li><a class="enlaces" id="carta" href="#">Carta</a>
                     <ul class="desplegable">
-                        <li><a class="subenlaces" href="#">- Menú del día</a></li>
-                        <li><a class="subenlaces" href="#">- Platos</a></li>
-                        <li><a class="subenlaces" href="#">- Postres</a></li>
-                        <li><a class="subenlaces" href="#">- Vinos</a></li>
+                        <li><a class="subenlaces" href="Paginas_Secundarias/Menu_dia.html">- Menú del día</a></li>
+                        <li><a class="subenlaces" href="Paginas_Secundarias/Platos.html">- Platos</a></li>
+                        <li><a class="subenlaces" href="Paginas_Secundarias/Postres.html">- Postres</a></li>
+                        <li><a class="subenlaces" href="Paginas_Secundarias/Vinos.html">- Vinos</a></li>
                     </ul>
                 </li>
-                <li><a class="enlaces" href="#">Eventos</a></li>
-                <li><a class="enlaces" href="#">Pedidos</a></li>
-                <li><a class="enlaces" href="#">Reservas</a></li>
-                <li><a class="enlaces" href="#">Quienes somos</a></li>
+                <li><a class="enlaces" href="Paginas_Secundarias/Eventos.html">Eventos</a>
+                    <ul class="desplegable">
+                        <li><a class="subenlaces" href="#">- Cata de vinos</a></li>
+                        <li><a class="subenlaces" href="#">- Degustación de tapas</a></li>
+                        <li><a class="subenlaces" href="#">- Noches temáticas</a></li>
+                        <li><a class="subenlaces" href="#">- Festividades</a></li>
+                    </ul>
+                </li>
+                <li><a class="enlaces" href="Paginas_Secundarias/Pedidos.html">Pedidos</a></li>
+                <li><a class="enlaces" href="Paginas_Secundarias/Reservas.html">Reservas</a></li>
+                <li><a class="enlaces" href="Paginas_Secundarias/Quienes_somos.html">Quienes somos</a></li>
                 <li><a href="#"><img class="banderas" src="img/españita.png" width="20px" height="20px" alt="error"></a></li>
                 <li><a href="#"><img class="banderas" src="img/inglaterra.png" width="20px" height="20px" alt="error"></a></li>
             </ul>
         </nav>
     </header><br>
+    <div id="general">
+
     <main>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque et dicta quas numquam quae optio, omnis hic atque, nulla adipisci odit! Cum necessitatibus similique doloremque adipisci, eos nobis a modi.</p>
-        <br><br><br><br><br><br><br><br><br><br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat similique, ipsa placeat eligendi ipsam molestiae perferendis qui iste consectetur harum, sit magni, velit delectus aliquid laborum suscipit? Facere, exercitationem error.</p>
-        <br><br><br><br><br><br><br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur dignissimos suscipit, minima vel culpa sed, fugiat ullam impedit perspiciatis reiciendis mollitia dolorem ea doloremque voluptatem rem expedita earum modi quos!</p>
-        <br><br><br><br><br><br><br><br><br><br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat similique, ipsa placeat eligendi ipsam molestiae perferendis qui iste consectetur harum, sit magni, velit delectus aliquid laborum suscipit? Facere, exercitationem error.</p>
-        <br><br><br><br><br><br><br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur dignissimos suscipit, minima vel culpa sed, fugiat ullam impedit perspiciatis reiciendis mollitia dolorem ea doloremque voluptatem rem expedita earum modi quos!</p>
-        <br><br><br><br><br><br><br><br><br><br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat similique, ipsa placeat eligendi ipsam molestiae perferendis qui iste consectetur harum, sit magni, velit delectus aliquid laborum suscipit? Facere, exercitationem error.</p>
-        <br><br><br><br><br><br><br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur dignissimos suscipit, minima vel culpa sed, fugiat ullam impedit perspiciatis reiciendis mollitia dolorem ea doloremque voluptatem rem expedita earum modi quos!</p>
+        <div id="historia">
+
+        </div>
+
+        <div id="carta_index">
+
+        </div>
+
+        <div id="eventos">
+
+        </div>
+
+        <div id="pedidos_reservas">
+
+        </div>
 
     </main>
+</div>
     <footer>
         <p><a class="contacto" href="Paginas_Secundarias/contacto.html">Contacto</a>
             <ul class="redes">
-            <li><a href="https://www.facebook.com"><img src="img/Facebook.png" alt="Facebook" width="35" height="35"></a></li>
             <li><a href="https://www.instagram.com"><img src="img/Instagram.png" alt="Instagram" width="35" height="35"></a></li>
-            <li><a href="https://twitter.com"><img src="img/Twitter.png" alt="Twitter" width="35" height="35"></a></li>
+            <li><a href="https://www.facebook.com"><img src="img/Facebook.png" alt="Facebook" width="35" height="35"></a></li>
             <li><a href="https://www.youtube.com"><img src="img/Youtube.png" alt="Twitter" width="35" height="35"></a></li>
+            <li><a href="https://twitter.com"><img src="img/Twitter.png" alt="Twitter" width="35" height="35"></a></li>
             <li><a href="https://www.pinterest.com"><img src="img/Pinterest.png" alt="Twitter" width="35" height="35"></a></li>
             
         </ul>
