--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <li><a class="enlaces" href="Paginas_Secundarias/Pedidos.html">Pedidos</a></li>
                 <li><a class="enlaces" href="Paginas_Secundarias/Reservas.html">Reservas</a></li>
                 <li><a class="enlaces" href="Paginas_Secundarias/Quienes_somos.html">Quienes somos</a></li>
-                <li><a href="#"><img class="banderas" src="img/españita.png" width="20px" height="20px" alt="error"></a></li>
-                <li><a href="#"><img class="banderas" src="img/inglaterra.png" width="20px" height="20px" alt="error"></a></li>
+                <li><a href="#"><img class="banderas" src="img/españita.png" alt="error"></a></li>
+                <li><a href="#"><img class="banderas" src="img/inglaterra.png" alt="error"></a></li>
             </ul>
         </nav>
     </header><br>
