--- a/index.html
+++ b/index.html
@@ -38,22 +38,45 @@
         </nav>
     </header><br>
     <div id="general">
-
+        <h1>Historia</h1><hr>
     <main>
         <div id="historia">
-
+            <h2 id="h2_historia" class="titulos">Nuestra historia</h2>
+            <p id="texto_historia">En el restaurante <span style="font-style: italic;">La Pinta </span>tenemos el compromiso de proporcionar los mejores productos posibles con los ingredientes más exquisitos de todas las partes del mundo. Llevamos más de 120 años trabajando en nuestros platos para poder saciar el apetito de cualquier cliente.</p>
         </div>
-
-        <div id="carta_index">
-
+        <h1>Carta</h1><hr>
+        <div id="div_carta" class="div_general">
+            <a href="Paginas_Secundarias/Vinos.html"><div id="vinos" class="divs">
+                <h2 class="titulos">Vinos</h2>
+            </div></a>
+            <a href="Paginas_Secundarias/Menu_dia.html"><div id="menu_dia" class="divs">
+                <h2 class="titulos">Menú del día</h2>
+            </div></a>
+            <a href="Paginas_Secundarias/Postres.html"><div id="postres" class="divs">
+                <h2 class="titulos">Postres</h2>
+            </div></a>
+            <a href="Paginas_Secundarias/Platos.html"><div id="platos" class="divs">
+                <h2 class="titulos">Platos</h2>
+            </div></a>
         </div>
-
-        <div id="eventos">
-
+        <h1>Eventos</h1><hr>
+        <div id="eventos" class="div_general">
+            <a href="#"><div id="cata" class="divs">
+                <h2 class="titulos">Cata de vinos</h2>
+            </div></a>
+            <a href="#"><div id="tapas" class="divs">
+                <h2 class="titulos">Degustación de tapas</h2>
+            </div></a>
+            <a href="#"><div id="tematico" class="divs">
+                <h2 class="titulos">Noches temáticas</h2>
+            </div></a>
+            <a href="#"><div id="festividad" class="divs">
+                <h2 class="titulos">Festividades</h2>
+            </div></a>
         </div>
-
+        <h1>Pedidos & Reservas</h1><hr>
         <div id="pedidos_reservas">
-
+            
         </div>
 
     </main>
